fix: timeout error on large file import
Refs: #119